<resources>
    <string name="app_name">VoiceApp</string>
    <string name="AishaSplash">Aisha Voice Assistant</string>
    <string name="AishaTopMain">What task do you want to help you with?</string>
    <string name="AishaShop">Shopping List</string>
    <string name="AishaToDo">To-Do List</string>
    <string name="AishaEvent">Event List</string>
    <string name="AishaTalkShop">"Aisha, go to my Shopping List"</string>
    <string name="AishaTalkToDo">"Aisha, go to my To-Do List"</string>
    <string name="AishaTalkEvent">"Aisha, go to my Event List"</string>
    <string name="TitleShop">Your Shoping List</string>
    <string name="TitleToDo">Your To-Do List</string>
    <string name="TitleNewTask">Your New Task</string>
    <string name="TitleEvent">Your Event Screen</string>
    <string name="TitleNewEvent">Your New Event</string>
    <string name="TitleInfo">Info</string>
</resources>