<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/customAleix"
    tools:context=".MainMenu">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/l1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AishaTopMain"
            android:textColor="@color/white"
            android:layout_marginTop="35sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/l2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_below="@+id/l1"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40sp"
        android:background="@drawable/background_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shop"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/i1"
            android:text="@string/AishaShop"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/AishaMain" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/l2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="40sp"
        android:id="@+id/l3"
        android:background="@drawable/background_veige">
        <ImageView
            android:id="@+id/i2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_speak"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/i2"
            android:text="@string/AishaTalkShop"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/AishaSpeak"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/l4"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_below="@+id/l3"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40sp"
        android:background="@drawable/background_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i3"
            android:layout_width="56dp"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/i3"
            android:text="@string/AishaToDo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/AishaMain" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/l4"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="40sp"
        android:id="@+id/l5"
        android:background="@drawable/background_veige">
        <ImageView
            android:id="@+id/i4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_speak"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/i4"
            android:text="@string/AishaTalkToDo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/AishaSpeak"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/l6"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_below="@+id/l5"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40sp"
            android:background="@drawable/background_dark"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/i5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calen"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@+id/i5"
                android:text="@string/AishaEvent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/AishaMain" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/l6"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="40sp"
            android:id="@+id/l7"
            android:background="@drawable/background_veige">
            <ImageView
                android:id="@+id/i6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_speak"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/i6"
                android:text="@string/AishaTalkEvent"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/AishaSpeak"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/l8"
        android:layout_below="@id/l7"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_micro"
            android:layout_marginBottom="8dp"
            android:layout_centerInParent="true"
            android:id="@+id/b1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="45dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_speaker"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

</RelativeLayout>

